# Notes

./: .gitignore  Notes.md
ASM/: README.md
Bluetooth/: BR-EDR_BLE.md  BasicCommunication.md  BasicConcept.md  BluetoothStack.md
Boot/Coreboot/: Embedded_Firmware_Solution.md  SystemFirmware.md
CMake/: CMake.md  CMakeLists.txt  test.cpp
CMake/math/: CMakeLists.txt  oper.cpp  oper.h
CleanCode/: CleanCode.md
Compile-Link-Library/: 10-Memory.md  12-SystemCall_API.md  8-Organization of Shared Library.md  Readme.md
Docker/: docker.md
FederatedLearning/OpenFL/: README.md
GDB/: 10 Examining Data.md  gdb.md
GPU/CUDA/: README.md  matmul.cu  test.cu
GPU/PTX/: README.md
Linux/: I2C.md  Interrupt.md  SPI.md  rsyslog.md
Linux/ACPI/: Readme.md
Linux/DeviceTree/: README.md
Linux/I2C/: I2C.md
Linux/Interrupt/: Interrupt.md
Linux/LinuxDeviceDriver/: Chapter02_05.md  Chapter08_Allocating Memory.md  Chapter14_Device Module.md  Chapter14_DeviceModel.md  MRAA.md  Overall.md
Linux/Memory/: README.md  layout.md
Linux/PCI/: Reame.md
Linux/PlatformDevice/: README.md
Linux/RAPL/: Readme.md
Linux/SPI/: SPI.md
MachineLearning/: regression.md
Others/: 发言.docx
Python/UnitTest/: pytest.md
UEFI/: Build.md  Chapter11-GUI.md
Virtualization/: Hypervisors.md  Virtualization-Namespace.md
X86-Learning/: Module8-x86 Instruction Set Overview.md  Module9-Introduction to x86 Register Set
